2024-02-06T16:17:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7802757886 # 92
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 32
* notice: prev accum: outdated-unq outdated-all / unq all: 741 1171 / 759 1203
* notice: next accum: outdated-unq outdated-all / unq all: 741 1171 / 759 1204
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-06]

2024-02-06T08:18:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7796621841 # 91
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 741 1171 / 758 1202
* notice: next accum: outdated-unq outdated-all / unq all: 741 1171 / 759 1203
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-23 2024-02-06]

2024-02-06T01:03:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7793099912 # 90
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 740 1169 / 758 1202
* notice: next accum: outdated-unq outdated-all / unq all: 741 1171 / 758 1202
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-22] / []

2024-02-05T16:17:45Z: