@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-06T16:17:54Z",
-  "count_outdated" : 1171,
-  "uniques_outdated" : 741,
+  "timestamp" : "2024-02-07T01:01:47Z",
+  "count_outdated" : 1173,
+  "uniques_outdated" : 742,
   "count" : 1204,
   "uniques" : 759,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 3,
