@@ -1,12 +1,7 @@
 {
-  "count": 32,
+  "count": 31,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 3,
