@@ -1,3 +1,12 @@
+2024-02-07T01:01:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7808364957 # 93
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 741 1171 / 759 1204
+* notice: next accum: outdated-unq outdated-all / unq all: 742 1173 / 759 1204
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-23] / []
+
 2024-02-06T16:17:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7802757886 # 92
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
